<resources>
    <string name="app_name">EinsatzAPP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dangerApp">Gefährliche-Stoffe-App</string>
    <string name="carApp">Fahrzeug Details</string>
    <string name="header_title">RLF</string>
    <string name="header_text">Feuerwehr Walding</string>
    <string name="settings">Einstellungen</string>
    <string name="aboutUs">Über uns</string>
    <string name="map">Karte</string>
    <string name="missions">Einsätze</string>
    <string name="missionInfoApp">Einsatz-Info-App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>